--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ main {
     border-radius: 5px;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 380px; /* Largeur fixe de 380px */
+    width: 380px; 
     height: 731px; /* Hauteur fixe de 731px */
     margin-bottom: 20px; /* Espace entre les cartes */
 }
